# UniversityProjects

./: .gitignore  README.md
First Year/Second Semester/Graph Algorithms/Assignment1CPP/: CMakeLists.txt  main.cpp
First Year/Second Semester/Graph Algorithms/Assignment1CPP/ConsoleUI/: ConsoleUI.cpp  ConsoleUI.h
First Year/Second Semester/Graph Algorithms/Assignment1CPP/DirectedGraph/: DirectedGraph.cpp  DirectedGraph.h
First Year/Second Semester/Graph Algorithms/Assignment1CPP/FileManager/: FileManager.cpp  FileManager.h
First Year/Second Semester/Graph Algorithms/Assignment1CPP/Files/: graph10k_modif.txt  graph1k_modif.txt  random_graph1_cpp.txt
First Year/Second Semester/Graph Algorithms/Assignment1CPP/GraphGenerator/: GraphRandomGenerator.cpp  GraphRandomGenerator.h
First Year/Second Semester/Graph Algorithms/Assignment1CPP/Testing/: TestAll.cpp  TestAll.h
First Year/Second Semester/Object-Oriented Programming/AppTemplates/: CMakeLists.txt  main.cpp
First Year/Second Semester/Object-Oriented Programming/AppTemplates/examples/stl_examples/: StlExamples.cpp  StlExamples.h
First Year/Second Semester/Object-Oriented Programming/AppTemplates/infrastructure/DynamicVector/: DynamicVector.h  DynamicVector.inl
First Year/Second Semester/Object-Oriented Programming/AppTemplates/infrastructure/Repository/: Repository.h  Repository.inl
First Year/Second Semester/Object-Oriented Programming/AppTemplates/presentation/consoleUI/: ConsoleUI.cpp  ConsoleUI.h
First Year/Second Semester/Object-Oriented Programming/AppTemplates/testing/: TestAll.cpp  TestAll.h
First Year/Second Semester/Object-Oriented Programming/ExamPreparation/WrittenExam/: CMakeLists.txt  main.cpp
First Year/Second Semester/Object-Oriented Programming/ExamPreparation/WrittenExam/SecondaryDate/: SmartPointer.h  Vector.cpp  Vector.h  main.cpp
First Year/Second Semester/Object-Oriented Programming/ExamPreparation/WrittenExam/SecondaryDateV2/: Iterator.cpp  Iterator.h  SmartPointer.cpp  SmartPointer.h  Vector.h  main.cpp
Third Year/First Semester/Parallel and Distributed Programming/Labs/Assignment5/: Assignment5.cpp  Assignment5.sln  Assignment5.vcxproj  Assignment5.vcxproj.filters  CMakeLists.txt  main.cpp
Third Year/First Semester/Parallel and Distributed Programming/Labs/Assignment5/Polynomial/: Polynomial.cpp  Polynomial.h
Third Year/First Semester/Parallel and Distributed Programming/Labs/Assignment5/Utils/: ThreadUtils.cpp  ThreadUtils.h
Third Year/First Semester/Parallel and Distributed Programming/assignment1/BankAccounts/: CMakeLists.txt
Third Year/First Semester/Parallel and Distributed Programming/assignment1/BankAccounts/Account/: Account.h
Third Year/First Semester/Parallel and Distributed Programming/assignment1/BankAccounts/AccountLogEntry/: AccountLogEntry.h
Third Year/First Semester/Parallel and Distributed Programming/assignment1/BankAccounts/Bank/: Bank.cpp
(+2560 files in other folders)
