cmake_minimum_required(VERSION 3.16)
project(Assignment5)

set(CMAKE_CXX_STANDARD 14)

add_executable(Assignment5 main.cpp Polynomial/Polynomial.cpp Polynomial/Polynomial.h Polynomial/MultiplicationStrategy/Sequential/Simple/SequentialSimpleMultiplicationStrategy.cpp Polynomial/MultiplicationStrategy/Sequential/Simple/SequentialSimpleMultiplicationStrategy.h)